# SmartStock

./: .gitignore  README.md  SmartStock.ipynb
.ipynb_checkpoints/: SmartStock-checkpoint.ipynb  SmartStock_Final_Project-checkpoint.ipynb  Untitled-Copy1-checkpoint.ipynb  Untitled-Copy2-checkpoint.ipynb  Untitled1-checkpoint.ipynb
backend/: .env.example  pyproject.toml  requirements.txt  train_models.py  upload_data.py
backend/app/: main.py
backend/app/database/: mongodb.py
backend/app/models/: forecast_features.pkl  halt_features.pkl  halt_model.pkl  label_encoders.pkl
backend/app/routes/: data.py  prediction.py
backend/app/schemas/: schemas.py
backend/app/services/: forecasting_service.py  halt_service.py  preprocessing_service.py
backend/app/utils/: encoders.py  feature_engineering.py  validators.py
frontend/: app.py  pyproject.toml
frontend/components/: cards.py  forms.py
frontend/pages/: add_data.py  predict.py
