[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "joblib==1.4.2",
    "motor==3.4.0",
    "numpy==2.0.2",
    "pandas==2.2.2",
    "pydantic==2.7.1",
    "pymongo==4.6.3",
    "python-dotenv==1.0.1",
    "scikit-learn==1.7.0",
    "uvicorn[standard]==0.29.0",
    "xgboost==2.0.3",
]
